--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,17 +4,23 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>DataBaseTesting.DataBaseTestingClass</td>
+<td>nopCom.RegPageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>datatest</td>
-<td>&nbsp;</td></tr>
+<td>RegTest</td>
+<td>Regression </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Lounch</td>
+<td>smoke Regression sanity </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
