--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,6 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b2f2a2">  <td>24/01/18 18:30:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataBaseTestingClass.datatest()[pri:0, instance:DataBaseTesting.DataBaseTestingClass@1139b2f3]">datatest</td> 
-  <td>main@1864230087</td>   <td></td> </tr>
+<tr bgcolor="db82ae">  <td>24/02/02 00:05:33</td>   <td>0</td> <td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:nopCom.RegPageTest@359f7cdf]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1427646530</td>   <td></td> </tr>
+<tr bgcolor="b2f2a2">  <td>24/02/02 00:05:26</td>   <td>-6528</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegPageTest.RegTest(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:nopCom.RegPageTest@359f7cdf]">RegTest</td> 
+  <td>main@1427646530</td>   <td></td> </tr>
+<tr bgcolor="b2f2a2">  <td>24/02/02 00:04:41</td>   <td>-51789</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegPageTest.Lounch(java.lang.String)[pri:0, instance:nopCom.RegPageTest@359f7cdf]">&gt;&gt;Lounch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1427646530</td>   <td></td> </tr>
+<tr bgcolor="b2f2a2">  <td>24/02/02 00:05:26</td>   <td>-6528</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegPageTest.RegTest(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:nopCom.RegPageTest@359f7cdf]">RegTest</td> 
+  <td>main@1427646530</td>   <td></td> </tr>
+<tr bgcolor="b2f2a2">  <td>24/02/02 00:05:26</td>   <td>-6528</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegPageTest.RegTest(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:nopCom.RegPageTest@359f7cdf]">RegTest</td> 
+  <td>main@1427646530</td>   <td></td> </tr>
+<tr bgcolor="b2f2a2">  <td>24/02/02 00:05:26</td>   <td>-6528</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegPageTest.RegTest(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:nopCom.RegPageTest@359f7cdf]">RegTest</td> 
+  <td>main@1427646530</td>   <td></td> </tr>
+<tr bgcolor="b2f2a2">  <td>24/02/02 00:05:26</td>   <td>-6528</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegPageTest.RegTest(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:nopCom.RegPageTest@359f7cdf]">RegTest</td> 
+  <td>main@1427646530</td>   <td></td> </tr>
+<tr bgcolor="db82ae">  <td>24/02/02 00:04:33</td>   <td>-59922</td> <td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:nopCom.RegPageTest@359f7cdf]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1427646530</td>   <td></td> </tr>
+<tr bgcolor="b2f2a2">  <td>24/02/02 00:05:26</td>   <td>-6528</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegPageTest.RegTest(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:nopCom.RegPageTest@359f7cdf]">RegTest</td> 
+  <td>main@1427646530</td>   <td></td> </tr>
+<tr bgcolor="b2f2a2">  <td>24/02/02 00:05:26</td>   <td>-6528</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegPageTest.RegTest(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:nopCom.RegPageTest@359f7cdf]">RegTest</td> 
+  <td>main@1427646530</td>   <td></td> </tr>
 </table>
